--- a/DemoWebApplication/Views/Shared/_Layout.cshtml
+++ b/DemoWebApplication/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
 
-                    <li>@Html.ActionLink("Books", "Index", "Books")</li>
+                    @*<li>@Html.ActionLink("Books", "Index", "Books")</li>*@
                     <li>@Html.ActionLink("Add Book", "AddBook", "Books")</li>
                     <li>@Html.ActionLink("Search Book", "SearchBook", "Books")</li>
                 </ul>
