--- a/DemoWebApplication/Views/Shared/_BookList.cshtml
+++ b/DemoWebApplication/Views/Shared/_BookList.cshtml
@@ -1,5 +1,35 @@
 ﻿@model DemoWebApplication.Models.BooksViewModel
 
+
+@{
+    if ((Model.PageNumber * Model.PageSize) > Model.TotalRecords) {
+
+        int a = (Model.PageNumber - 1) * Model.PageSize + 1;
+
+        <label id="msg" style="color:dodgerblue">
+            Showing @a to @Model.TotalRecords Records of @Model.TotalRecords
+        </label>
+    } else {
+        if (Model.PageNumber == 1) {
+
+            int a = (Model.PageNumber * Model.PageSize);
+
+            <label id="msg" style="color:dodgerblue">
+                Showing  @Model.PageNumber  to  @a  Records of @Model.TotalRecords
+            </label>
+        } else {
+
+            int a = (Model.PageNumber - 1) * Model.PageSize + 1;
+            int b = Model.PageNumber * Model.PageSize;
+
+            <label id="msg" style="color:dodgerblue">
+                Showing  @a to  @b  Records of @Model.TotalRecords
+            </label>
+        }
+    }
+}
+
+
 <table class="table">
     <tr>
         <th> Book ID</th>
@@ -25,3 +55,37 @@
         }
     }
 </table>
+
+<footer>
+    <ul id="paging" class="pagination">
+
+        @{
+            decimal TotalPages = 1;
+            if (Model.PageSize > 0) {
+                TotalPages = Math.Ceiling((decimal)Model.TotalRecords / Model.PageSize);
+            }
+
+            if (Model.PageNumber != 1) {
+                <li><a id="prev">Prev</a></li>
+            }
+
+            for (int i = 1; i <= TotalPages; i++) {
+                if (Model.PageNumber == i) {
+                    <li class="active">
+                        <a id="SelectedPage">  @i  </a>
+                    </li>
+
+                } else {
+                    <li>
+                        <a id="SelectedPage">  @i  </a>
+                    </li>
+                }
+            }
+            if (Model.PageNumber != TotalPages) {
+                <li>
+                    <a id="next">Next</a>
+                </li>
+            }
+        }
+    </ul>
+</footer>
