--- a/DemoWebApplication/Views/Shared/_Layout.cshtml
+++ b/DemoWebApplication/Views/Shared/_Layout.cshtml
@@ -16,16 +16,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Library Management", "", "Books", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("E-Library Management", "", "Books", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                        <li>@Html.ActionLink("About", "About", "Home")</li>
+                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
 
                     @*<li>@Html.ActionLink("Books", "Index", "Books")</li>*@
-                    <li>@Html.ActionLink("Add Book", "AddBook", "Books")</li>
+                    @*<li>@Html.ActionLink("Add Book", "AddBook", "Books")</li>*@
                     <li>@Html.ActionLink("Search Book", "SearchBook", "Books")</li>
                 </ul>
             </div>
@@ -41,6 +41,15 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/Scripts/jquery-3.6.0.js"></script>
+    <script src="~/Scripts/jquery-3.6.0.min.js"></script>
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
